[PAXEXAM-435] Upgrade to GlassFish 3.1.2.2
adapted security settings for 3.1.2.2